--- a/main-app/package.json
+++ b/main-app/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "JSONStream": "^1.3.5",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "node-cron": "^3.0.3"
