--- a/main-app/package.json
+++ b/main-app/package.json
@@ -10,10 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "JSONStream": "^1.3.5",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.2.0",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "stream-json": "^1.8.0"
   },
   "type": "commonjs",
   "devDependencies": {
